--- a/u/us/use/userfriendly.org.html
+++ b/u/us/use/userfriendly.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the userfriendly.org privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212075041id_/http%3A//www.userfriendly.org/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the userfriendly.org privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604065859id_/http%3A//www.userfriendly.org/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>
 	<meta http-equiv="Content-Type" content="text/html; CHARSET=iso-8859-1">
@@ -30,9 +30,29 @@ font-size: 13px;
 <a href="http://www.userfriendly.org/static/"><img alt="userfriendly.org" border="0" width="125" height="60" src="http://graphics.userfriendly.org/images/titles/title_uforg.gif"></a>
 </td>
 <td align="center" valign="top" width="100%">
-<img src="http://service.bfast.com/bfast/serve?bfmid=1391718&amp;siteid=39081477&amp;bfpage=netwrkoffer_468_60" border="0" width="1" height="1" nosave="">
-<a href="http://service.bfast.com/bfast/click?bfmid=1391718&amp;siteid=39081477&amp;bfpage=netwrkoffer_468_60" target="_top"><img src="http://www2.warehouse.com/MecaImages/www/images/beFree/banners/New/DataComm/Network/NetworkOffer_468_60.gif" border="0" width="468" height="60" alt=""></a>
-
+<script language="JavaScript1.1" type="text/javascript">
+<!--
+var bust = Math.floor(1000000*Math.random()+1);
+document.write('<IFRAME src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?slot=1&region=1&bust=' + bust + '&keyword=NULL" height="60" width="468" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0" align="middle" scrolling="no">');
+document.write('<ILAYER src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?slot=1&region=1&bust=' + bust + '&keyword=NULL" height="60" width="468" visibility="show" z-index="10"></ILAYER>');
+document.write('<NOLAYER>');
+document.write('<A href="http://adsnew.userfriendly.org/cgi-bin/advertpro/blink.pl?slot=1&region=1&bust=' + bust + '" target="_top">');
+document.write('<IMG src="http://adsnew.userfriendly.org/cgi-bin/advertpro/bimg.pl?slot=1&region=1&bust=' + bust + '&keyword=NULL" border="0" width="468" height="60" alt="UF Archives">');
+document.write('</A>');
+document.write('</NOLAYER>');
+document.write('</IFRAME>');
+//-->
+</script><iframe src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?slot=1&amp;region=1&amp;bust=423409&amp;keyword=NULL" height="60" width="468" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0" align="middle" scrolling="no"><ILAYER src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?slot=1&region=1&bust=423409&keyword=NULL" height="60" width="468" visibility="show" z-index="10"></ILAYER><NOLAYER><A href="http://adsnew.userfriendly.org/cgi-bin/advertpro/blink.pl?slot=1&region=1&bust=423409" target="_top"><IMG src="http://adsnew.userfriendly.org/cgi-bin/advertpro/bimg.pl?slot=1&region=1&bust=423409&keyword=NULL" border="0" width="468" height="60" alt="UF Archives"></A></NOLAYER></iframe>
+<noscript>
+<IFRAME src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?slot=1&region=1&keyword=NULL" height="60" width="468" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0" align="middle" scrolling="no">
+<ILAYER src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?slot=1&region=1&keyword=NULL" height="60" width="468" visibility="show" z-index="10"></ilayer>
+<NOLAYER>
+<A href="http://adsnew.userfriendly.org/cgi-bin/advertpro/blink.pl?region=1&slot=1" target="_top">
+<IMG src="http://adsnew.userfriendly.org/cgi-bin/advertpro/bimg.pl?region=1&slot=1&keyword=NULL" border="0" width="468" height="60" alt="UF Archives">
+</a>
+</nolayer>
+</iframe>
+</noscript>
 
 </td></tr>
 </tbody></table>
@@ -43,19 +63,39 @@ font-size: 13px;
 &nbsp;<a href="http://www.userfriendly.org/archives.html">Archives</a><br>
 <a href="http://postcard.userfriendly.org/">Postcards</a><br>
 <a href="http://www.userfriendly.org/community/">Community</a><br>
-&nbsp;<a href="http://www.userfriendly.org/community/webcal/index.shtml">Calendar</a><br>
-&nbsp;<a href="http://www.userfriendly.org/community/ufiles/">UFiles &amp; Fanart</a><br>
-&nbsp;<a href="http://www.userfriendly.org/discus/">Friendly Forum</a><br>
 &nbsp;<a href="http://www.userfriendly.org/community/iambe/">Iambe</a><br>
-<a href="http://link.userfriendly.org/linkto/http://www.geekfinder.com/">Geekfinder</a><br>
-<a href="http://www.userfriendly.org/bazaar/">Geek Bazaar</a><br>
+<a href="http://www.geekfinder.com/">Geekfinder</a><br>
 <a href="http://link.userfriendly.org/linkto/http://www.computergear.com/userfriendly.html">UF Store</a><br>
 <a href="http://ars.userfriendly.org/users/login.cgi">Comments Sign-up</a><br>
-<a href="http://link.userfriendly.org/linkto/http://www.ufmedia.com/investor.html">UF Investor Info</a><br>
+<a href="http://ars.userfriendly.org/users/newmem.html">Become a Member</a><br>
+<a href="http://members.userfriendly.org/">Members Ad Free site!</a><br>
 <a href="http://link.userfriendly.org/linkto/http://www.ufmedia.com/why.html">Advertise with UF</a><br>
 <p>
-<a href="http://links.userfriendly.org/linkto/http://www.suse.com/us/products/suse_linux/i386/index.html"><img border="0" src="http://ads.userfriendly.org/ufma0056en.gif?1008143442" width="125" height="125" alt="SuSE 7.3 - Professional or Personal"></a><br>
+<script language="JavaScript1.1" type="text/javascript">
+<!--
+var bust = Math.floor(1000000*Math.random()+1);
+document.write('<IFRAME src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?region=2&bust=' + bust + '&keyword=NULL" height="600" width="120" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0" align="middle" scrolling="no">');
+document.write('<ILAYER src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?region=2&bust=' + bust + '&keyword=NULL" height="600" width="120" visibility="show" z-index="10"></ILAYER>');
+document.write('<NOLAYER>');
+document.write('<A href="http://adsnew.userfriendly.org/cgi-bin/advertpro/blink.pl?region=2&bust=' + bust + '" target="_top">');
+document.write('<IMG src="http://adsnew.userfriendly.org/cgi-bin/advertpro/bimg.pl?region=2&bust=' + bust + '&keyword=NULL" border="0" width="120" height="600" alt="UF Store">');
+document.write('</A>');
+document.write('</NOLAYER>');
+document.write('</IFRAME>');
+//-->
+</script><iframe src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?region=2&amp;bust=4619&amp;keyword=NULL" height="600" width="120" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0" align="middle" scrolling="no"><ILAYER src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?region=2&bust=4619&keyword=NULL" height="600" width="120" visibility="show" z-index="10"></ILAYER><NOLAYER><A href="http://adsnew.userfriendly.org/cgi-bin/advertpro/blink.pl?region=2&bust=4619" target="_top"><IMG src="http://adsnew.userfriendly.org/cgi-bin/advertpro/bimg.pl?region=2&bust=4619&keyword=NULL" border="0" width="120" height="600" alt="UF Store"></A></NOLAYER></iframe>
+<noscript>
+<IFRAME src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?region=2&keyword=NULL" height="600" width="120" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0" align="middle" scrolling="no">
+<ILAYER src="http://adsnew.userfriendly.org/cgi-bin/advertpro/banners.pl?region=2&keyword=NULL" height="600" width="120" visibility="show" z-index="10"></ilayer>
+<NOLAYER>
+<A href="http://adsnew.userfriendly.org/cgi-bin/advertpro/blink.pl?region=2&slot=1" target="_top">
+<IMG src="http://adsnew.userfriendly.org/cgi-bin/advertpro/bimg.pl?region=2&slot=1&keyword=NULL" border="0" width="120" height="600" alt="UF Store">
+</a>
+</nolayer>
+</iframe>
+</noscript>
 
+</p><p>
 
 
 </p></td>
@@ -111,7 +151,7 @@ If you have any additional questions, please contact us at
 <table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#FFFFCC">
 <tbody><tr>
 <td valign="top" align="CENTER">
-[ <a href="mailto:webdiva@userfriendly.org">Website Trouble</a> | <a href="http://www.userfriendly.org/faq/">F.A.Q.</a> | <a href="http://www.userfriendly.org/contact/">Contact Us</a> | <a href="http://www.userfriendly.org/friends/">Friends</a> | <a href="http://www.userfriendly.org/privacypolicy/">Privacy Policy</a> | <a href="http://link.userfriendly.org/linkto/http://www.ufmedia.com/">About UF</a> | <a href="http://link.userfriendly.org/linkto/http://www.ufmedia.com/investor.html">UF Investor Info</a> | <a href="http://link.userfriendly.org/linkto/http://www.ufmedia.com/why.html">Advertise with UF</a> ]
+[ <a href="mailto:webdiva@userfriendly.org">Website Trouble</a> | <a href="http://www.userfriendly.org/faq/">F.A.Q.</a> | <a href="http://www.userfriendly.org/contact/">Contact Us</a> | <a href="http://www.userfriendly.org/friends/">Friends</a> | <a href="http://www.userfriendly.org/privacypolicy/">Privacy Policy</a> | <a href="http://link.userfriendly.org/linkto/http://www.ufmedia.com/">About UF</a> | <a href="http://link.userfriendly.org/linkto/http://www.ufmedia.com/why.html">Advertise with UF</a> ]
 <br>All images, characters, content and text are copyrighted and trademarks of User Friendly Media Inc. except where other ownership applies.
 </td>
 </tr>	
