--- a/l/lu/lub/lubbockonline.com.html
+++ b/l/lu/lub/lubbockonline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lubbockonline.com privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218063615id_/http%3A//lubbockonline.com/housekeeping/about_us.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lubbockonline.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604065957id_/http%3A//lubbockonline.com/housekeeping/about_us.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <script language="JavaScript" type="text/javascript">
@@ -187,7 +187,7 @@ var bannum;
 			 }
 		    //--></script></td>
           	<td><img src="/images/misc/dot_clear.gif" height="1" width="4"><font face="Arial, sans-serif" size="2" color="#ffffff"><img src="/images/misc/dot_clear.gif" height="1" width="75"><b>Currently:</b><br>
-Clear , 41°
+Clear , 80°
 		</font>		</td>
         </tr>
         <tr>
@@ -252,7 +252,7 @@ Clear , 41°
 	<a href="/classified/">Classifieds</a><br>
 	<a href="/cgi-bin/ubb/Ultimate.cgi?action=intro">Discussion Board</a><br>
 	<a href="/college_sports/">College Sports</a><br>
-   <a href="/update.shtml">Updated News</a><br>
+   <a href="/update/">Updated News</a><br>
    <a href="/police/">Police Blotter</a><br>
 	<a href="/court_records/">Court Records</a><br>
 	<a href="/letters/">Letters</a><br>
@@ -268,7 +268,88 @@ Clear , 41°
   </tr>
   <tr bgcolor="E1E1AA">
     <td align="center" valign="top">
-<p><font face="Arial, Helvetica, sans-serif" size="1"><b>- <a href="/agriculture/">Agriculture</a><br> - <a href="/apheadlines/" target="_blank">AP Headlines</a><br> - <a href="http://wire.ap.org" target="_blank">AP News</a><br> - <a href="/stories">Archives</a><br> - <a href="/court_records/index.shtml">Court Records</a> <br> - <a href="/education/">Education</a><br> - <a href="/families/">Families of Lubbock</a><br> - <a href="/lifestyles">Lifestyles</a><br> - <a href="/local">Local News</a><br> - <a href="/national/">National News</a><br> - <a href="/obituari/">Obituaries</a> <br> - <a href="/gallery/pets_of_lubbock/1.shtml" target="new" onclick="window.open('','new','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=660,height=570');">Photo Galleries</a><br> - <a href="/religion/">Religion</a><br> - <a href="http://wire.ap.org/APnews/main.html?FRONTID=SCIENCE" target="_blank">Science Wire (AP)</a> <br> - <a href="/state/">State News</a><br> - <a href="/stocks/">Stocks<br> </a>- <a href="http://wire.ap.org/APnews/main.html?FRONTID=TECHNOLOGY" target="_blank">Technology Wire (AP)</a><a href="/stocks/"> <br> </a>- <a href="/update.shtml">Updated News</a><br> - <a href="/weather/">Weather </a><br> - <a href="http://wire.ap.org/APnews/main.html?FRONTID=WEATHER" target="_blank">Weather (AP)</a> <br> - <a href="/world/">World News</a></b></font><br> <b><font face="Verdana, Arial, Helvetica, sans-serif" size="1">BUSINESS:</font></b><br> <b><font face="Arial, Helvetica, sans-serif" size="1">- <a href="http://wire.ap.org/APnews/main.html?FRONTID=BUSINESS" target="_blank">AP Business Wire</a><br> - <a href="/bandi/">Business &amp; Industrial</a><br> - <a href="/biz_mon/">Business Monthly</a><br> - <a href="/business">Business Headlines</a><br> - <a href="/stocks/">Stocks</a></font></b><br> <b><font face="Verdana, Arial, Helvetica, sans-serif" size="1">OPINION: </font></b><font face="Arial, Helvetica, sans-serif" size="1"><b><br> - <a href="/columnists/">Columnists</a><br> - <a href="http://lubbockonline.com/cgi-bin/ubb/Ultimate.cgi?action=intro" target="_blank">Discussion Forum</a><br> - <a href="/editorial/">Editorials</a><br> - <a href="/letters/">Letters</a><br> - <a href="/cgi-bin/edit2000.cgi">Submit a Letter</a><br> <b><font face="Verdana, Arial, Helvetica, sans-serif" size="1">ENTERTAINMENT:</font></b><br> <b><font face="Arial, Helvetica, sans-serif" size="1">- <a href="http://wire.ap.org/APnews/main.html?FRONTID=ARTS" target="_blank">AP Arts Wire<br> </a>- <a href="/around_town/">Around Town</a><br> - <a href="/entertainment/">Headlines</a><br> - <a href="http://lubbockmusic.com" target="_blank">LubbockMusic.com</a><br> - <a href="http://movies.zap2it.com/?txluaj" target="_blank">Movie Times</a> <br> - <a href="http://tvlistings.zap2it.com/partners/index.asp?partner_id=txluaj" target="_blank">TV Listings</a> </font></b><br> <b><font face="Verdana, Arial, Helvetica, sans-serif" size="1">SPORTS:</font></b><font face="Arial, Helvetica, sans-serif" size="1"><b><br> </b></font><b><font face="Arial, Helvetica, sans-serif" size="1">- <a href="http://wire.ap.org/APnews/main.html?FRONTID=SPORTS" target="_blank">AP Sports</a> <br> - <a href="/college_sports">College Sports</a><br> - <a href="/community_sports/">Community Sports</a> <br> - <a href="http://morris.golfserv.com/gso/default.asp?Source=LTO" target="_blank">GolfServ</a><br> - <a href="/high_school/">High School</a> <br> <b><b><font face="Arial, Helvetica, sans-serif" size="1">- <a href="/high_school/scores.shtml">High School Scores</a></font></b></b> <br> - <a href="/pro_spts/">Pro Sports</a><br> - <a href="http://redraiders.com/">RedRaiders.com</a><br> - <a href="http://lubbockonline.fanaticzone.com/" target="_blank">SEC Football</a></font></b><font face="Arial, Helvetica, sans-serif" size="1"><b><br> </b></font><b><font face="Verdana, Arial, Helvetica, sans-serif" size="1">MARKETPLACE:</font></b><br> <b><font face="Arial, Helvetica, sans-serif" size="1">- <a href="/classified/index.shtml">Classifieds</a><br> - <a href="http://needacoupon.com/">COUPONS!</a><br> - <a href="http://www.classifiedwarehouse.com/lubbock">National Classifieds</a><br> - <a href="http://raidergear.com/">RaiderGear!</a><br> - <a href="http://e-lubbock.com/">Shopping Mall</a><br> - <a href="https://secure.lubbockonline.com/ecart/catalog/A-J_Subscriptions.html">Subscriptions!</a></font></b><br></b></font></p><font face="Arial, Helvetica, sans-serif" size="1"><b><p><b><font face="Arial, Helvetica, sans-serif" size="1"><a href="/announcements/">ANNOUNCEMENTS</a><br> <a href="/announcements/forms.shtml">ANNOUNCEMENT FORMS</a><br> <a href="/students/">STUDENT STORIES</a><br> <a href="/interactive/">INTERACTIVE</a><br> <a href="/classifieds/">CLASSIFIEDS</a><br> <a href="/special/">SPECIAL SECTIONS</a></font></b></p><p><br></p></b></font>
+ 
+<p><font face="Arial, Helvetica, sans-serif" size="1"><b>- <a href="/agriculture/">Agriculture</a><br>
+  - <a href="/apheadlines/" target="_blank">AP Headlines</a><br>
+  - <a href="http://wire.ap.org" target="_blank">AP News</a><br>
+  - <a href="/stories">Archives</a><br>
+  - <a href="/court_records/index.shtml">Court Records</a> <br>
+  - <a href="/education/">Education</a><br>
+  - <a href="/lifestyles">Lifestyles</a><br>
+  - <a href="/local">Local News</a><br>
+  - <a href="/nie/">Newspapers in Education</a><br>
+  - <a href="/national/">National News</a><br>
+  - <a href="/obituari/">Obituaries</a> <br>
+  - <a href="/gallery/pets_of_lubbock/1.shtml" target="new" onclick="window.open('','new','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=660,height=570');">Photo 
+  Galleries</a><br>
+  - <a href="/regional/">Regional</a><br>
+  - <a href="/religion/">Religion</a><br>
+  - <a href="http://wire.ap.org/APnews/main.html?FRONTID=SCIENCE" target="_blank">Science 
+  Wire (AP)</a> <br>
+  - <a href="/state/">State News</a><br>
+  - <a href="/stocks/">Stocks<br>
+  </a>- <a href="http://wire.ap.org/APnews/main.html?FRONTID=TECHNOLOGY" target="_blank">Technology 
+  Wire (AP)</a><a href="/stocks/"> <br>
+  </a>- <a href="/update/">Updated News</a><br>
+  - <a href="/lifestyles">Vista</a><br>
+  - <a href="/weather/">Weather </a><br>
+  - <a href="http://wire.ap.org/APnews/main.html?FRONTID=WEATHER" target="_blank">Weather 
+  (AP)<br>
+  </a>- <a href="/world/">World News</a><br>
+  - <a href="/young_heroes/">Young Heroes</a><br>
+  </b></font><b><font face="Verdana, Arial, Helvetica, sans-serif" size="1">BUSINESS:</font></b><br>
+  <b><font face="Arial, Helvetica, sans-serif" size="1">- <a href="http://wire.ap.org/APnews/main.html?FRONTID=BUSINESS" target="_blank">AP 
+  Business Wire</a><br>
+  - <a href="/bandi/">Business &amp; Industrial</a><br>
+  - <a href="/business">Business Headlines</a><br>
+  - <a href="/stocks/">Stocks</a></font></b><br>
+  <b><font face="Verdana, Arial, Helvetica, sans-serif" size="1">OPINION: </font></b><font face="Arial, Helvetica, sans-serif" size="1"><b><br>
+  - <a href="/columnists/">Columnists</a><br>
+  - <a href="http://lubbockonline.com/cgi-bin/ubb/Ultimate.cgi?action=intro" target="_blank">Discussion 
+  Forum</a><br>
+  - <a href="/editorial/">Editorials</a><br>
+  - <a href="/letters/">Letters</a><br>
+  - <a href="/cgi-bin/edit2000.cgi">Submit a Letter</a><br>
+  <font face="Verdana, Arial, Helvetica, sans-serif" size="1">ENTERTAINMENT:</font><br>
+  - <a href="http://wire.ap.org/APnews/main.html?FRONTID=ARTS" target="_blank">AP 
+  Arts Wire<br>
+  </a>- <a href="/around_town/">Around Town</a><br>
+  - <a href="/entertainment/">Headlines</a><br>
+  - <a href="http://lubbockmusic.com" target="_blank">LubbockMusic.com</a><br>
+  - <a href="http://alliance.zap2it.com/zp_mt_front_page/?site_code=mlaj" target="_blank">Movie 
+  Times</a> <br>
+  - <a href="http://tvlistings.zap2it.com/partners/index.asp?partner_id=lub" target="_blank">TV 
+  Listings</a> <br>
+  <font face="Verdana, Arial, Helvetica, sans-serif" size="1">SPORTS:</font><br>
+  - <a href="http://wire.ap.org/APnews/main.html?FRONTID=SPORTS" target="_blank">AP 
+  Sports</a> <br>
+  - <a href="http://www.big12.net" target="_blank">Big12.net</a><br>
+  - <a href="/college_sports">College Sports</a><br>
+  - <a href="/community_sports/">Community Sports</a> <br>
+  - <a href="http://golfnews.lubbockonline.com" target="_blank">Golf News</a><br>
+  - <a href="http://morris.golfserv.com/gso/default.asp?Source=LTO" target="_blank">GolfServ</a><br>
+  - <a href="/high_school/">High School</a> <br>
+  - <a href="/pro_spts/">Pro Sports</a><br>
+  - <a href="http://redraiders.com/">RedRaiders.com</a><br>
+  - <a href="http://lubbockonline.fanaticzone.com/" target="_blank">SEC Football</a><br>
+  <font face="Verdana, Arial, Helvetica, sans-serif" size="1">MARKETPLACE:</font><br>
+  - <a href="/classified/index.shtml">Classifieds</a><br>
+  - <a href="http://needacoupon.com/">COUPONS!</a><br>
+  - <a href="http://www.classifiedwarehouse.com/lubbock">National Classifieds</a><br>
+  - <a href="http://raidergear.com/">RaiderGear!</a><br>
+  - <a href="http://e-lubbock.com/">Shopping Mall</a><br>
+  - <a href="https://secure.lubbockonline.com/ecart/catalog/A-J_Subscriptions.html">Subscriptions!</a><br>
+  </b></font></p>
+<font face="Arial, Helvetica, sans-serif" size="1"><b> 
+<p><a href="/announcements/">ANNOUNCEMENTS</a><br>
+  <a href="/announcements/forms.shtml">ANNOUNCEMENT FORMS</a><br>
+  <a href="/students/">STUDENT STORIES</a><br>
+  <a href="/interactive/">INTERACTIVE</a><br>
+  <a href="/classifieds/">CLASSIFIEDS</a><br>
+  <a href="/special/">SPECIAL SECTIONS</a><br>
+</p>
+</b></font>
+
     </td>
   </tr>
   <tr bgcolor="737B9F">
